2005-12-27  Lutz Mueller <lutz@topfrose.de>

	* NEWS
	* configure.ac: We're now working on version 0.6.14.

2005-12-27  Lutz Mueller <lutz@topfrose.de>

	* test/Makefile.am: Remove the SOURCES variables - they are not necessary.

2005-10-24  Jan Patera <patera@users.sourceforge.net>

	* libexif/Canon/mnote-canon-entry.c: Don't check size of MNOTE_CANON_TAG_OWNER
	  and MNOTE_CANON_TAG_FIRMWARE - there can be many different values.

2005-08-27  Jan Patera <patera@users.sourceforge.net>

	* Canon mnote: Both parts of Settings had indices shifted by 1.
	  entries[] must have secondary sorting by value which is unsigned.
	  Wrong # of items in Settings: reading beyond allocated memory, crashes.

2005-08-23  Lutz Mueller <lutz@users.sourceforge.net>

	Some work on canon maker notes. Entries that contain several different
	values now expand to different entries.

2005-08-15  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Jakub Bogusz <qboosh@pld-linux.org>, related to translation.

2005-08-14  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c: Added value 2 of EXIF_TAG_COLOR_SPACE
	  patch #1253625 by Ross Burton - burtonini

2005-07-18  Lutz Mueller <lutz@users.sourceforge.net>

	* doc/Makefile.am: Make distcheck work again.

2005-07-11  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c:
	* po/de.po:
	* po/fr.po:
	* po/es.po: Added license.

2005-07-02  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Prevent infinite recursions (#1196787).

2005-06-19  Hubert Figuiere  <hfiguiere@teaser.fr>

	* test/Makefile.am (check_PROGRAMS): added check for make check

2005-05-01  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_fix): Don't create EXIF_IFD_1 if no 
	thumbnail data is available.

2005-04-30  Lutz Mueller <lutz@users.sourceforge.net>

	* test/test-mem.c: Show how to create EXIF data.
	* README: New section USAGE.

2005-04-30  Lutz Mueller <lutz@users.sourceforge.net>
