@@ -24,6 +24,7 @@ libexif_la_SOURCES =		\
 	exif-tag.c		\
 	exif-utils.c		\
 	i18n.h
+libexif_la_DEPENDENCIES = $(srcdir)/libexif.sym
 libexif_la_LIBADD =			\
 	$(MATHLIBS)			\
 	$(LTLIBINTL)			\
@@ -33,10 +34,10 @@ libexif_la_LIBADD =			\
 
 canon/libmnote-canon.la:
 	cd canon && $(MAKE) libmnote-canon.la
-	
+
 olympus/libmnote-olympus.la:
 	cd olympus && $(MAKE) libmnote-olympus.la
-	
+
 pentax/libmnote-pentax.la:
 	cd pentax && $(MAKE) libmnote-pentax.la
 
